--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
 <h1>My Website</h1>
 <p>A website created by me.</p>
    <a href="komal12.html"></a>
+  <img src="S.png">
 
 </body>
 </html
