--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1>My Website</h1>
 <p>A website created by me.</p>
    <a href="komal12.html"></a>
-  <img src="S.png">
+  <img src="nature.jpg">
 
 </body>
 </html
