--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 <p>A website created by me.</p>
    <a href="komal12.html"></a>
   <img src="nature.jpg">
-
+   <img src="Nature.jpg">
 </body>
 </html
