--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <h1>My Website</h1>
-<p>A website created by me.</p>
    <a href="komal12.html"></a>
   <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Coffee | Shop</title>
-  </head>
+  </head
+     background image>
   <body>
     <div class="container">
       <div class="nav-bar">
@@ -37,290 +37,6 @@
   </body>
 </html>
 </body>
-</html
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-.container {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/background.webp');
-    background-size: cover;
-    background-position: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 80px;
-}
 
-.nav-bar .title {
-    color: #fff;
-    font-size: 67px;
-    font-weight: 500;
-    cursor: pointer;
-}
-
-span {
-    color: crimson;
-}
-
-.nav-bar p {
-    position: absolute;
-    margin-top: 90px;
-    margin-left: 50px;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.menu li {
-    list-style: none;
-    display: inline-block;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 27px;
-    font-weight: 600;
-    margin-left: 25px;
-    transition: .4s ease;
-}
-
-.menu li a:hover {
-    color: crimson;
-    padding: 5px 10px;
-    border: 1px solid #fff;
-}
-
-.home {
-    height: 400px;
-    padding: 70px;
-}
-
-.title-1 {
-    font-size: 56px;
-    color: #fff;
-    font-weight: 600;
-}
-
-.home p {
-    color: lemonchiffon;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.home button {
-    height: 40px;
-    color: #fff;
-    background: crimson;
-    font-size: 22px;
-    padding: 5px 30px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 5px;
-    transition: .4s ease;
-    cursor: pointer;
-}
-
-.home button:hover {
-    background: none;
-    border: 2px solid crimson;
-}{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/background.webp');
-    background-size: cover;
-    background-position: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 80px;
-}
-
-.nav-bar .title {
-    color: #fff;
-    font-size: 67px;
-    font-weight: 500;
-    cursor: pointer;
-}
-
-span {
-    color: crimson;
-}
-
-.nav-bar p {
-    position: absolute;
-    margin-top: 90px;
-    margin-left: 50px;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.menu li {
-    list-style: none;
-    display: inline-block;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 27px;
-    font-weight: 600;
-    margin-left: 25px;
-    transition: .4s ease;
-}
-
-.menu li a:hover {
-    color: crimson;
-    padding: 5px 10px;
-    border: 1px solid #fff;
-}
-
-.home {
-    height: 400px;
-    padding: 70px;
-}
-
-.title-1 {
-    font-size: 56px;
-    color: #fff;
-    font-weight: 600;
-}
-
-.home p {
-    color: lemonchiffon;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.home button {
-    height: 40px;
-    color: #fff;
-    background: crimson;
-    font-size: 22px;
-    padding: 5px 30px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 5px;
-    transition: .4s ease;
-    cursor: pointer;
-}
-
-.home button:hover {
-    background: none;
-    border: 2px solid crimson;
-}{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/background.webp');
-    background-size: cover;
-    background-position: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 80px;
-}
-
-.nav-bar .title {
-    color: #fff;
-    font-size: 67px;
-    font-weight: 500;
-    cursor: pointer;
-}
-
-span {
-    color: crimson;
-}
-
-.nav-bar p {
-    position: absolute;
-    margin-top: 90px;
-    margin-left: 50px;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.menu li {
-    list-style: none;
-    display: inline-block;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 27px;
-    font-weight: 600;
-    margin-left: 25px;
-    transition: .4s ease;
-}
-
-.menu li a:hover {
-    color: crimson;
-    padding: 5px 10px;
-    border: 1px solid #fff;
-}
-
-.home {
-    height: 400px;
-    padding: 70px;
-}
-
-.title-1 {
-    font-size: 56px;
-    color: #fff;
-    font-weight: 600;
-}
-
-.home p {
-    color: lemonchiffon;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.home button {
-    height: 40px;
-    color: #fff;
-    background: crimson;
-    font-size: 22px;
-    padding: 5px 30px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 5px;
-    transition: .4s ease;
-    cursor: pointer;
-}
-
-.home button:hover {
-    background: none;
-    border: 2px solid crimson;
-}
