--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    <a href="komal12.html"></a>
   <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head
+     backgound image coffee,avif>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
