--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Coffee | Shop</title>
-  </head
-     background image>
+  </head>
+   body {
+  background-image: url("coffee.avif"), url("coffee.avif");
+
+}
   <body>
     <div class="container">
       <div class="nav-bar">
