--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   background-image: url("coffee.avif"), url("coffee.avif");
 
 }
+   nav li{
+   display: inline-flex:
+   margin: 60px;
+   pading:15px;
+   text decoration: None;
+   }
   <body>
     <div class="container">
       <div class="nav-bar">
