--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<p style="background-image: url('coffee.avif);">
+   
 <h1>My Website</h1>
    <a href="komal12.html"></a>
   <!DOCTYPE html>
@@ -12,7 +15,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Coffee | Shop</title>
   </head>
-  <body>
+ <body>
     <div class="container">
       <div class="nav-bar">
         <h1 class="title">Cof<span>fee</span></h1>
