--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<p style="background-image: url('coffee.avif);">
+<p style="background-image: url('coffee.jpj.jpg');">
    
 <h1>My Website</h1>
    <a href="komal12.html"></a>
